Edit vimrc and tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,10 @@
 # List of plugins
 # Supports 'github_username/repo' or full git URLs
-set -g @tpm_plugins "		\
-    tmux-plugins/tpm		\
-    tmux-plugins/tmux-sensible	\
-    tmux-plugins/tmux-resurrect	\
-"
+set -g @plugin tmux-plugins/tpm
+set -g @plugin tmux-plugins/tmux-sensible
+set -g @plugin tmux-plugins/tmux-resurrect
+set -g @plugin tmux-plugins/tmux-continuum 
 
-run-shell ~/.tmux/plugins/tpm/tpm
+set -g default-terminal "screen-256color"
+
+run '~/.tmux/plugins/tpm/tpm'
